crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__dep_types__graphs_serial_deps_of_all_types.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(proj)"]
    2 [ label="RunTask(proj:serial)"]
    3 [ label="RunTask(proj:a)"]
    4 [ label="RunPersistentTask(proj:server)"]
    5 [ label="RunTask(proj:b)"]
    6 [ label="RunTask(proj:teardown)"]
    1 -> 0 [ label="required"]
    3 -> 1 [ label="required"]
    4 -> 1 [ label="required"]
    5 -> 1 [ label="required"]
    5 -> 3 [ label="required"]
    6 -> 1 [ label="required"]
    2 -> 1 [ label="required"]
    2 -> 3 [ label="required"]
    2 -> 4 [ label="wait"]
    2 -> 5 [ label="required"]
    6 -> 2 [ label="cleanup"]
}
