crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__dep_types__graphs_wait_deps.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(proj)"]
    2 [ label="RunTask(proj:waits)"]
    3 [ label="RunPersistentTask(proj:server)"]
    1 -> 0 [ label="required"]
    3 -> 1 [ label="required"]
    2 -> 1 [ label="required"]
    2 -> 3 [ label="wait"]
}
